@@ -46,3 +46,12 @@ CHANGELOG ONLY RECORDS CHANGES MADE POST 1/3/2020
     Functions:
         Changed the way special functions are called
             # now uses function(*[param_list]) rather than function([param_list])
+2/28/2020:
+    Functions:
+        text_scroll
+            # improved the handling of voice_file if it is None or not
+            # added comments and doctrings
+        quicktime_bar
+            # added default value for key ('f')
+        All
+            # added comments and doctrings
